[workspace]

[package]
name = "backfill-oracle-worker"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backfill-oracle-worker"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.74"
backfill-oracle-program = { path = "../programs/backfill-oracle", features = [
    "no-entrypoint",
] }
base64 = "0.21.5"
chrono = "0.4.31"
dashmap = "5.5.3"
dotenvy = "0.15.7"
envy = "0.4.2"
femme = "2.2.1"
futures = "0.3"
futures-util = "0.3"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
miette = { version = "5.10.0", features = ["fancy"] }
pyth-sdk-solana = "0.8.0"
r-cache = "0.5.0"
reqwest = "0.11.22"
serde = "^1"
serde_json = "^1"
solana-account-decoder = "^1.16"
switchboard-solana = { version = "=0.29.51", features = ["macros"] }
sys-info = "0.9.1"
tokio = { version = "^1", features = ["full"] }
tokio-graceful-shutdown = "0.14.0"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
